refactoring array problem